# map_analysis

./: CMakeLists.txt  README.md  package.xml
cfg/: MapAnalyzer.cfg  crop_cloud.yaml  map_analyzer.yaml
include/map_analysis/: analysis.h  image_marker.h  mesh.h  pcl_helpers.h  place_record.h  relative_metric.h  segment_differences_inliers.h  segment_differences_inliers.hpp  viewers.h
launch/: bag_map_analysis.launch  map_analysis.launch
msg/: ArtifactMetrics.msg  ArtifactReport.msg  MapMetrics.msg
rviz/: .gitignore  rviz.rviz
src/: analysis.cpp  bag_map_analysis.cpp  live_map_analysis.cpp  map_analysis.cpp  mesh.cpp  relative_metric.cpp  test_map_analysis.cpp  viewers.cpp
srv/: AnalyzePointCloud.srv
test/: SubTLogo.dae  SubTLogo.pcd  artifacts.csv  create_bag.sh  input_map.bag  output_map.bag  test_bag_analysis.sh  test_map_analysis.sh  test_pcl2.py
